// Copyright 2016 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package admin;

option go_package = "infra/tricium/api/admin/v1;admin";

import "infra/tricium/api/v1/data.proto";
import "infra/tricium/api/v1/function.proto";
import "infra/tricium/api/v1/platform.proto";

// Tricium workflow configuration.
//
// A Workflow is generated from a merged service and project config,
// and contains information required for one workflow run.
message Workflow {
  reserved 1;

  repeated Worker workers = 2;

  reserved 3, 4;

  // Function definitions used for this workflow; these contain the function
  // owner and component, to be used when filling out a bug filing template.
  repeated tricium.Function functions = 5;
  string buildbucket_server_host = 6;
}

// A Tricium worker includes the details needed to execute an analyzer.
message Worker {
  // Name of worker is combination of the function and platform name
  // for which results are provided, e.g "GitFileIsolator_LINUX".
  string name = 1;

  // Includes data dependencies for runtime type checking.
  // Platform-specific details are provided when required by the corresponding
  // data type.
  tricium.Data.Type needs = 2;
  tricium.Platform.Name needs_for_platform = 3;
  tricium.Data.Type provides = 4;
  tricium.Platform.Name provides_for_platform = 5;

  // Workers to run after this one.
  //
  // For recipe-based analyzers this should be empty.
  repeated string next = 6;

  // Name of the runtime platform configuration.
  tricium.Platform.Name runtime_platform = 7;

  reserved 8, 9;

  oneof impl {
    // Recipe for recipe-based implementation.
    tricium.Recipe recipe = 12;
  }

  reserved 10, 11;
}
